refactor: add the aliases to the vercel.json file settings

--- a/vercel.json
+++ b/vercel.json
@@ -20,5 +20,15 @@
                 "DELETE"
             ]
         }
+    ],
+    "rewrites": [
+        {
+            "source": "@app/(.*)",
+            "destination": "<destination>/app/$1"
+        },
+        {
+            "source": "@infra/(.*)",
+            "destination": "<destination>/infra/$1"
+        }
     ]
 }
